# allsat-cnf

./: .gitignore  README.md  pseudocode.py  pyproject.toml  setup.py
allsat_cnf/: aig_adapter.py  bench_adapter.py  cnfizer.py  demorgan_cnfizer.py  distributive_cnfizer.py  label_cnfizer.py  nnfizer.py  polarity_cnfizer.py  polarity_finder.py  polarity_walker.py  utils.py
benchmark/: README.md  check_results.py  config.sh  evaluate.py  evaluate_d4.py  evaluate_msat.py  evaluate_tabularallsat.py  evaluate_tabularallsmt.py  fix_to.py  plot.py  plot.sh  plot_sizes.py  rename.sh  run-utils.sh  run_aig_eval_d4.sh  run_aig_eval_enum.sh  run_aig_eval_msat_enum.sh  run_aig_eval_msat_sat.sh  run_aig_eval_sat.sh  run_aig_eval_tabularallsat.sh  run_aig_gen.sh  run_check_results.sh  run_iscas85_eval_d4.sh  run_iscas85_eval_enum.sh  run_iscas85_eval_msat_enum.sh  run_iscas85_eval_msat_sat.sh  run_iscas85_eval_sat.sh  run_iscas85_eval_tabularallsat.sh  run_iscas85_gen.sh  run_syn_bool_eval_d4.sh  run_syn_bool_eval_enum.sh  run_syn_bool_eval_msat_enum.sh  run_syn_bool_eval_msat_sat.sh  run_syn_bool_eval_sat.sh  run_syn_bool_eval_tabularallsat.sh  run_syn_bool_gen.sh  run_syn_lra_eval_d4.sh  run_syn_lra_eval_enum.sh  run_syn_lra_eval_msat_enum.sh  run_syn_lra_eval_msat_sat.sh  (+12 more)
benchmark/aig/: benchmark_aig.sh  config.sh  evaluate.py  (+6 more)
examples/: 0001.aag  check_nnfs.py  circuit.aag  circuit.aig  circuit10.aag  circuit10.aig  circuit11.aag  circuit11.aig  circuit2.aig  circuit3.aag  circuit3.aig  circuit4.aag  circuit4.aig  circuit5.aag  circuit5.aig  circuit6.aag  circuit6.aig  circuit7.aag  circuit7.aig  circuit8.aag  circuit8.aig  circuit9.aag  circuit9.aig  comadd2.aag  comul3.aag  comul4.aag  example0.py  example1.py  example2.py  example3.py  example_aiger.py  example_skeleton.py  example_template.py  exampleaig.py  formula_to_aig.py  remove_cr.sh
local_tseitin/: activation_cnfizer.py  aig_adapter.py  aig_cnfizer.py  cnfizer.py  conds_cnfizer.py  conds_cnfizer_aig.py  label_cnf.py  label_cnfizer.py  polarity_cnfizer.py  polarity_finder.py  utils.py
src/: cnfizer.py  cnfizer_without_A.py
test/: instances.py  test_basic.py  test_classic_cnfs.py  test_cnf.py  test_cnfs.py  test_polarity_cnf.py  test_preprocessing.py  utils.py
(+126 files in other folders)
